# sstg

./: README.md  sstg.cabal
src/: compileToSStg.hs  sstg-dump.hs
src/Language/SSTG/: Serialization.hs  Syntax.hs
src/Language/SSTG/GHC/: CompileToSTG.hs  CompileToSTGTest.hs
