Name:                sstg

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1.0

-- A short (one-line) description of the package.
Synopsis:            Simplified, Serializable STG

-- A longer description of the package.
Description:         Uses GHC to compile Haskell sources into STG, which is then stored in a somewhat simplified format on disk.

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Gergo Erdi <http://gergo.erdi.hu/>

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          gergo@erdi.hu

-- A copyright notice.
-- Copyright:           

Category:            Language

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.6

source-repository head
  Type:     git
  Location: git://github.com/gergoerdi/sstg.git

Executable sstg-compile
  hs-source-dirs:    src
  Main-is:             sstg-compile.hs
  Other-modules:     Language.SSTG.Syntax Language.SSTG.Serialization Language.SSTG.GHC.CompileToSTG  

  ghc-options:       -Wall -fwarn-tabs
                     -fno-warn-incomplete-patterns -fno-warn-unused-binds -fno-warn-unused-matches
                     -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-orphans

  Build-depends:     base >= 4.0, ghc == 7.0.*, containers, array, mtl, ghc-paths, directory, filepath  
  
Executable sstg-dump
  hs-source-dirs:    src
  Main-is:           sstg-dump.hs
  Other-modules:     Language.SSTG.Syntax Language.SSTG.Serialization

  ghc-options:       -Wall -fwarn-tabs
                     -fno-warn-incomplete-patterns -fno-warn-unused-binds -fno-warn-unused-matches
                     -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-orphans

  Build-depends:     base >= 4.0, ghc == 7.0.*, containers, array, mtl, ghc-paths
  
Library
  hs-source-dirs:    src
  Exposed-modules:   Language.SSTG.Syntax Language.SSTG.Serialization Language.SSTG.GHC.CompileToSTG
                       
  ghc-options:       -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-incomplete-patterns -fno-warn-unused-binds
                     -fno-warn-orphans

  Build-depends:     base >= 4.0, ghc == 7.0.*, containers, array, mtl, ghc-paths
